--- a/package.json
+++ b/package.json
@@ -4,21 +4,21 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "build:server": "babel src/server/ -d build/server --presets es2015",
-    "build:server:watch": "babel -c -w -d ./build/server src/server --presets es2015",
+    "build:server": "babel src/server/ -d dist/server --presets es2015",
+    "watch:server": "babel -c -w -d ./dist/server src/server --presets es2015",
     "build:js": "webpack",
-    "build:js:watch": "watch 'npm run build:js' src/client/js",
-    "build:sass": "node-sass src/client/sass/main.scss > build/client/bundle.css",
-    "build:sass:watch": "watch 'npm run build:sass' src/client/sass",
-    "build:static": "cp src/client/index.html build/client && cp -r src/client/images build/client",
+    "watch:js": "watch 'npm run build:js' src/client/js",
+    "build:sass": "node-sass src/client/sass/main.scss > dist/client/bundle.css",
+    "watch:sass": "watch 'npm run build:sass' src/client/sass",
+    "build:static": "cp src/client/index.html dist/client && cp -r src/client/images build/client",
     "build:client": "npm run build:js && npm run build:sass && npm run build:static",
-    "build:client:watch": "npm run build:js:watch & npm run build:sass:watch",
+    "watch:client": "parallelshell 'npm run watch:js' 'npm run watch:sass'",
     "build": "npm run build:server && npm run build:client",
-    "build:watch": "npm run build:server:watch & npm run build:client:watch",
-
-    "reload": "livereload build/client & npm run build:client:watch"
+    "watch": "parallelshell 'npm run watch:server' 'npm run watch:client'",
+    "reload": "parallelshell 'livereload build/client' 'npm run watch:client'"
   },
   "dependencies": {
+    "babel": "^6.1.18",
     "body-parser": "~1.10.2",
     "cookie-parser": "~1.3.3",
     "debug": "~2.1.1",
@@ -33,12 +33,15 @@
     "babel-loader": "^6.2.0",
     "babel-polyfill": "^6.2.0",
     "babel-preset-es2015": "^6.1.18",
+    "babel-preset-es2015-rollup": "^1.0.0",
     "babel-preset-react": "^6.1.18",
     "babelify": "^7.2.0",
     "coffee-script": "^1.10.0",
     "eslint": "^1.10.0",
     "eslint-plugin-react": "^3.9.0",
+    "livereload": "^0.4.0",
     "node-sass": "^3.4.2",
+    "parallelshell": "^2.0.0",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
     "react-router": "^1.0.0",
