--- a/package.json
+++ b/package.json
@@ -3,22 +3,22 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "clean": "rm -rf dist && mkdir -p dist/client",
+
     "build:server": "babel src/server/ -d dist/server --presets es2015",
-    "watch:server": "babel -c -w -d ./dist/server src/server --presets es2015",
     "build:js": "webpack",
-    "watch:js": "watch 'npm run build:js' src/client/js",
     "build:sass": "node-sass src/client/sass/main.scss > dist/client/bundle.css",
-    "watch:sass": "watch 'npm run build:sass' src/client/sass",
-    "build:static": "cp src/client/index.html dist/client && cp -r src/client/images build/client",
+    "build:static": "cp -p src/client/index.html dist/client && cp -r -p src/client/images dist/client",
     "build:client": "npm run build:js && npm run build:sass && npm run build:static",
-    "watch:client": "parallelshell 'npm run watch:js' 'npm run watch:sass'",
+    "livereload": "parallelshell 'livereload dist/client' 'npm run build:js -- --watch' 'npm run build:sass -- --watch'",
+    "prebuild": "npm run clean",
     "build": "npm run build:server && npm run build:client",
-    "watch": "parallelshell 'npm run watch:server' 'npm run watch:client'",
-    "reload": "parallelshell 'livereload build/client' 'npm run watch:client'"
+    "watch": "parallelshell 'npm run build:server -- --watch' 'npm run livereload'",
+
+    "start": "node ./bin/www"
   },
   "dependencies": {
-    "babel": "^6.1.18",
+    "babel-polyfill": "^6.2.0",
     "body-parser": "~1.10.2",
     "cookie-parser": "~1.3.3",
     "debug": "~2.1.1",
@@ -31,7 +31,6 @@
     "babel-cli": "^6.2.0",
     "babel-core": "^6.2.1",
     "babel-loader": "^6.2.0",
-    "babel-polyfill": "^6.2.0",
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-es2015-rollup": "^1.0.0",
     "babel-preset-react": "^6.1.18",
@@ -39,6 +38,7 @@
     "coffee-script": "^1.10.0",
     "eslint": "^1.10.0",
     "eslint-plugin-react": "^3.9.0",
+    "history": "^1.13.1",
     "livereload": "^0.4.0",
     "node-sass": "^3.4.2",
     "parallelshell": "^2.0.0",
