--- a/package.json
+++ b/package.json
@@ -3,23 +3,17 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "clean": "rm -rf dist && mkdir -p dist/client",
-
-    "build:server": "babel src/server/ -d dist/server --presets es2015",
-    "build:js": "webpack",
-    "build:sass": "node-sass src/client/sass/main.scss > dist/client/bundle.css",
-    "build:static": "cp -p src/client/index.html dist/client && cp -r -p src/client/images dist/client",
-    "build:client": "npm run build:js && npm run build:sass && npm run build:static",
-    "livereload": "parallelshell 'livereload dist/client' 'npm run build:js -- --watch' 'npm run build:sass -- --watch'",
-    "prebuild": "npm run clean",
-    "build": "npm run build:server && npm run build:client",
-    "watch": "parallelshell 'npm run build:server -- --watch' 'npm run livereload'",
-
-    "start": "node ./bin/www"
+    "build:js": "browserify src/js/main.js -t babelify -d -o public/bundle.js --extension .jsx",
+    "build:sass": "node-sass src/sass/bundle.scss -o public/",
+    "build": "npm run build:js && npm run build:sass",
+    "watch": "parallelshell 'npm run build:js -- --watch' 'watch \" npm run build:sass\" src/sass'",
+    "livereload": "parallelshell 'livereload public' 'npm run watch'",
+    "start": "node main.js"
   },
   "dependencies": {
     "babel-polyfill": "^6.2.0",
     "body-parser": "~1.10.2",
+    "config": "^1.17.1",
     "cookie-parser": "~1.3.3",
     "debug": "~2.1.1",
     "express": "~4.11.1",
@@ -30,12 +24,9 @@
   "devDependencies": {
     "babel-cli": "^6.2.0",
     "babel-core": "^6.2.1",
-    "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.1.18",
-    "babel-preset-es2015-rollup": "^1.0.0",
     "babel-preset-react": "^6.1.18",
     "babelify": "^7.2.0",
-    "coffee-script": "^1.10.0",
     "eslint": "^1.10.0",
     "eslint-plugin-react": "^3.9.0",
     "history": "^1.13.1",
@@ -45,7 +36,6 @@
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
     "react-router": "^1.0.0",
-    "watch": "^0.16.0",
-    "webpack": "^1.12.6"
+    "watch": "^0.16.0"
   }
 }
